body overflow-x:hidden to prevent horizontal scroll

--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ body {
     font-family:Angoola;
     color:#FCF8E7;
     background-color: #010101;
+    overflow-x:hidden;
 }
 
 body.inverted {
